<resources>
    <string name="app_name">Smart Tracker</string>
    <string name="action_settings">Settings</string>
    <string name="action_signout">Sign Out</string>
    <string name="Find">Find</string>
    <string name="Borrow">Borrow</string>
    <string name="Lend">Lend</string>
    <string name="component_id">ID:</string>
    <string name="borrower_details">Borrower Details</string>
    <string name="lender_details">Lender Details</string>
    <string name="component_details">Component Details</string>
    <string name="no_network_connection">No Network Connection</string>
    <string name="unknown">Unknown</string>
    <string name="name">Name</string>
    <string name="email_id">Email ID</string>
    <string name="team">Team</string>
    <string name="component_name">Component Name</string>
    <string name="my_components">My Components</string>
    <string name="delete">Delete</string>

    MyComponent


</resources>
